<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:animateLayoutChanges="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:collapsedTitleGravity="center"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false"
            app:toolbarId="@id/toolbar"
            >

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/transparent"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:layout_collapseMode="pin"
            app:contentInsetStartWithNavigation="0dp"
            />
        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginTop="23dp">

            <ImageView
                android:id="@+id/img_cover_detail"
                android:layout_width="match_parent"
                android:layout_height="278dp"
                android:layout_marginEnd="20dp"
                android:contentDescription="@string/image_desc"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                tools:src="@color/colorAccent"
                app:layout_collapseMode="parallax" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="Date"
                android:textColor="#a9a9b0"
                android:id="@+id/tv_release_detail"
                />


            <LinearLayout
                android:layout_marginTop="7dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="Title"
                    android:textSize="23sp"
                    android:textColor="#3b3b3b"
                    android:id="@+id/tv_title_detail"
                    />

                <TextView
                    android:layout_marginEnd="20dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="8.0"
                    android:textSize="23sp"
                    android:textColor="#3b3b3b"
                    android:id="@+id/tv_rating_detail"
                    />
            </LinearLayout>

            <View
                android:layout_marginTop="21dp"
                android:layout_marginBottom="21dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black"/>

            <ProgressBar
                android:id="@+id/progress_bar_detail"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:visibility="gone"
                android:layout_gravity="center"
                />

            <TextView
                android:id="@+id/tv_overview_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:lineSpacingExtra="4dp"
                tools:text="@tools:sample/lorem/random"
                android:textColor="#a9a9b0"
                android:textSize="12.3sp"/>

            <View
                android:layout_marginTop="21dp"
                android:layout_marginBottom="21dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@android:color/black"/>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>


</androidx.coordinatorlayout.widget.CoordinatorLayout>